--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,14 @@ jobs:
         java-version: '17'
         distribution: 'corretto'
         cache: 'maven'
+    
+    - name: Verify Docker is available
+      run: |
+        docker --version
+        docker ps
         
     - name: Build with Maven
-      run: mvn clean package
+      run: mvn clean package -B -P jenkins-exclude-test
+      env:
+        TESTCONTAINERS_RYUK_DISABLED: false
+        TESTCONTAINERS_CHECKS_DISABLE: false
