Fix TraceabilityLogServiceTest failures in CI/CD
Add dedicated JMS test configuration to ensure reliable message delivery:
- Create explicit BrokerService bean that starts before tests
- Configure CachingConnectionFactory for better performance
- Set up dedicated JmsListenerContainerFactory with optimal test settings
- Ensure broker is fully started before tests begin (waitUntilStarted)
- Configure lower recovery interval (100ms) for faster message delivery

This fixes the 16 timeout errors and 8 test failures that were occurring
when JMS messages weren't being delivered within the 20-second timeout.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         docker ps
         
     - name: Build with Maven
-      run: mvn clean package -B -P jenkins-exclude-test
+      run: mvn clean package -B
       env:
         TESTCONTAINERS_RYUK_DISABLED: false
         TESTCONTAINERS_CHECKS_DISABLE: false
