--- a/src/test/resources/application-jms-test.properties
+++ b/src/test/resources/application-jms-test.properties
@@ -6,7 +6,7 @@ authoring.traceability.enabled=true
 
 # Use unique broker name per test context to prevent conflicts
 # The ${random.uuid} ensures each test context gets its own broker instance
-spring.activemq.broker-url=vm://test-broker-${random.uuid}?broker.persistent=false&create=true
+spring.activemq.broker-url=vm://test-broker-${random.uuid}?broker.persistent=false&broker.useJmx=false&create=true
 
 # JMS Template Configuration
 spring.jms.template.receive-timeout=5000
