Add explicit broker name to JMS URL to prevent JMX conflicts
Specify broker.brokerName parameter in the broker URL to ensure
each test context uses a uniquely named broker, preventing
JMX MBean registration conflicts when multiple contexts run.

--- a/src/test/resources/application-jms-test.properties
+++ b/src/test/resources/application-jms-test.properties
@@ -6,7 +6,8 @@ authoring.traceability.enabled=true
 
 # Use unique broker name per test context to prevent conflicts
 # The ${random.uuid} ensures each test context gets its own broker instance
-spring.activemq.broker-url=vm://test-broker-${random.uuid}?broker.persistent=false&broker.useJmx=false&create=true
+# broker.brokerName specifies a unique name to avoid JMX conflicts
+spring.activemq.broker-url=vm://test-broker-${random.uuid}?broker.persistent=false&broker.useJmx=false&broker.brokerName=test-${random.uuid}&create=true
 
 # JMS Template Configuration
 spring.jms.template.receive-timeout=5000
