Disable ActiveMQ JMX connector creation in test JVM
Add JVM system properties to Surefire configuration to prevent
ActiveMQ from creating JMX connectors and using platform MBeanServer
during tests. This prevents InstanceAlreadyExistsException errors
when multiple test contexts create embedded brokers.

--- a/pom.xml
+++ b/pom.xml
@@ -379,7 +379,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+					<argLine>--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED -Dorg.apache.activemq.broker.jmx.createConnector=false -Dorg.apache.activemq.UseDedicatedTaskRunner=false</argLine>
 				</configuration>
 			</plugin>
 			<!-- Docker Image Build -->
