Move JMS test configuration to application-test.properties
Consolidated JMS broker configuration into application-test.properties
instead of separate application-jms-test.properties file. This ensures
the properties are loaded consistently across all test contexts.

- Moved spring.activemq.broker-url and JMS settings to application-test.properties
- Enabled traceability in application-test.properties for JMS tests
- Removed application-jms-test.properties
- Updated TestConfig to remove PropertySource reference

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,11 +1,21 @@
 elasticsearch.index.prefix=test_
 validation.resourceFiles.path=
 validation.drools.rules.path=src/test/resources/drool-test-resources
-authoring.traceability.enabled=false
+# Traceability enabled for JMS tests to validate message delivery
+authoring.traceability.enabled=true
 spring.cloud.config.enabled=false
 daily-build.import.resources.readonly=false
 daily-build.delta-import.enabled=true
 cis.registration.enabled=false
+
+# JMS Test Configuration - unique broker per test context
+# Override default broker URL with unique instance
+spring.activemq.broker-url=vm://test-broker-${random.uuid}?broker.persistent=false&broker.useJmx=false&create=true
+spring.activemq.in-memory=true
+spring.jms.template.receive-timeout=5000
+spring.jms.template.delivery-mode=non_persistent
+jms.queue.prefix=test-${random.uuid}
+activemq.max.message.concept-activities=250
 
 # ECL cache should be enabled so that it's included in testing.
 cache.ecl.enabled=true
