Replace random.uuid with fixed broker name in test properties
Simplified JMS test configuration by removing dependency on RandomValuePropertySource.
Using fixed broker name 'snowstorm-test-broker' instead of random UUID.
Since each test JVM is isolated and we use create=false, a shared broker
name works fine without conflicts.

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -9,12 +9,12 @@ daily-build.delta-import.enabled=true
 cis.registration.enabled=false
 
 # JMS Test Configuration - unique broker per test context
-# Override default broker URL with unique instance
-spring.activemq.broker-url=vm://test-broker-${random.uuid}?broker.persistent=false&broker.useJmx=false&create=true
+# Use in-memory broker with JMX disabled and create=false to use shared broker instance
+spring.activemq.broker-url=vm://snowstorm-test-broker?broker.persistent=false&broker.useJmx=false&create=false
 spring.activemq.in-memory=true
 spring.jms.template.receive-timeout=5000
 spring.jms.template.delivery-mode=non_persistent
-jms.queue.prefix=test-${random.uuid}
+jms.queue.prefix=test-snowstorm
 activemq.max.message.concept-activities=250
 
 # ECL cache should be enabled so that it's included in testing.
