--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -9,8 +9,8 @@ daily-build.delta-import.enabled=true
 cis.registration.enabled=false
 
 # JMS Test Configuration - unique broker per test context
-# Use in-memory broker with JMX disabled and create=false to use shared broker instance
-spring.activemq.broker-url=vm://snowstorm-test-broker?broker.persistent=false&broker.useJmx=false&create=false
+# Use in-memory broker with JMX disabled, create broker on first connection
+spring.activemq.broker-url=vm://snowstorm-test-broker?broker.persistent=false&broker.useJmx=false
 spring.activemq.in-memory=true
 spring.jms.template.receive-timeout=5000
 spring.jms.template.delivery-mode=non_persistent
