Simplify JMS broker configuration for tests
- Use vm://localhost URL which auto-creates embedded broker
- This should fix TraceabilityLogServiceTest failures

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -8,9 +8,8 @@ daily-build.import.resources.readonly=false
 daily-build.delta-import.enabled=true
 cis.registration.enabled=false
 
-# JMS Test Configuration - unique broker per test context
-# Use in-memory broker with JMX disabled, create broker on first connection
-spring.activemq.broker-url=vm://snowstorm-test-broker?broker.persistent=false&broker.useJmx=false
+# JMS Test Configuration - auto-creates an embedded in-memory broker
+spring.activemq.broker-url=vm://localhost?broker.persistent=false&broker.useJmx=false
 spring.activemq.in-memory=true
 spring.jms.template.receive-timeout=5000
 spring.jms.template.delivery-mode=non_persistent
