Fix test failures by managing traceability scope
- Disable traceability by default in test config (causes UUID parsing errors)
- Enable traceability only for TraceabilityLogServiceTest using @TestPropertySource
- This fixes 8 SemanticIndexUpdateServiceTest errors where UUID test data was being parsed as numeric SNOMED IDs

--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,8 +1,9 @@
 elasticsearch.index.prefix=test_
 validation.resourceFiles.path=
 validation.drools.rules.path=src/test/resources/drool-test-resources
-# Traceability enabled for JMS tests to validate message delivery
-authoring.traceability.enabled=true
+# Traceability disabled by default in tests (can cause issues with test data that uses UUIDs)
+# Individual test classes can enable it using @TestPropertySource
+authoring.traceability.enabled=false
 spring.cloud.config.enabled=false
 daily-build.import.resources.readonly=false
 daily-build.delta-import.enabled=true
